created routes to add and remove mechanic and add and remove serialized parts. updated swagger docs to include all and successfully tested
