# app/blueprints/service_tickets/routes.py
@@ -4,11 +4,15 @@ from sqlalchemy import select
 from marshmallow import ValidationError
 from .schemas import service_ticket_schema, service_tickets_schema
 from . import service_tickets_bp
-from app.models import ServiceTicket, Customer, db, Mechanic
+from app.models import Customer, db, Mechanic, SerializedPart, ServiceTicket
 from app.blueprints.mechanics.schemas import mechanic_schema, mechanics_schema
+from app.blueprints.serialized_parts.schemas import (
+    serialized_part_schema,
+    serialized_parts_schema,
+)
+from app.blueprints.serialized_parts.schemas import serialized_part_schema
 from app.extensions import limiter, cache
 from app.util.auth import token_required, admin_required
-
 
 
 # ----- Service Ticket Routes -----
@@ -22,20 +26,23 @@ def create_ServiceTicket():
     except ValidationError as e:
         return jsonify(e.messages), 400
 
-    customer = db.session.get(Customer, service_ticket_data['customer_id'])
+    customer = db.session.get(Customer, service_ticket_data["customer_id"])
 
     new_service_ticket = ServiceTicket(**service_ticket_data)
     db.session.add(new_service_ticket)
     db.session.commit()
-    return service_ticket_schema.jsonify(new_service_ticket), 201  # successfully created
+    return service_ticket_schema.jsonify(
+        new_service_ticket
+    ), 201  # successfully created
+
 
 # Get all service_tickets
 @service_tickets_bp.route("/", methods=["GET"])
 @limiter.exempt
 def get_service_tickets():
     try:
-        page = int(request.args.get('page'))
-        per_page = int(request.args.get('per_page'))
+        page = int(request.args.get("page"))
+        per_page = int(request.args.get("per_page"))
         query = select(ServiceTicket)
         service_tickets = db.paginate(query, page=page, per_page=per_page)
         return service_tickets_schema.jsonify(service_tickets), 200
@@ -47,8 +54,9 @@ def get_service_tickets():
         return service_tickets_schema.jsonify(service_tickets), 200
     return jsonify({"error": "No service_tickets found"}), 404
 
+
 # Get a service_ticket
-@service_tickets_bp.route('/<int:service_ticket_id>', methods=['GET'])
+@service_tickets_bp.route("/<int:service_ticket_id>", methods=["GET"])
 @limiter.exempt
 @cache.cached(timeout=30)
 def get_service_ticket(service_ticket_id):
@@ -56,30 +64,60 @@ def get_service_ticket(service_ticket_id):
 
     if service_ticket:
         return service_ticket_schema.jsonify(service_ticket), 200
-    
+
     return jsonify({"error": "Invalid service_ticket ID"}), 400
 
+
 # Add a mechanic to a service_ticket
-@service_tickets_bp.route('/<int:service_ticket_id>/add-mechanic/<int:mechanic_id>', methods=['POST'])
+@service_tickets_bp.route("/<int:service_ticket_id>/add-mechanic/<int:mechanic_id>", methods=["PUT"])
 @limiter.limit("25/hour")
 @admin_required
 def add_mechanic(service_ticket_id, mechanic_id):
     ticket = db.session.get(ServiceTicket, service_ticket_id)
     mechanic = db.session.get(Mechanic, mechanic_id)
-    
+
     if ticket and mechanic:
         if mechanic not in ticket.mechanics:
             ticket.mechanics.append(mechanic)
             db.session.commit()
-            return jsonify({
-                'message': f'Successfully added mechanic {mechanic.name} to service ticket {service_ticket_id}',
-                'ticket': service_ticket_schema.dump(ticket),
-                'mechanic': mechanics_schema.dump(ticket.mechanics)}), 200
-        return jsonify({'error': 'Mechanic already assigned to this service ticket'}), 400
-    return jsonify({'error': 'Invalid service ticket or mechanic ID'}), 400
+            return jsonify(
+                {
+                    "message": f"Successfully added mechanic {mechanic.name} to service ticket {service_ticket_id}",
+                    "ticket": service_ticket_schema.dump(ticket),
+                    "mechanic": mechanics_schema.dump(ticket.mechanics),
+                }
+            ), 200
+        return jsonify(
+            {"error": "Mechanic already assigned to this service ticket"}
+        ), 400
+    return jsonify({"error": "Invalid service ticket or mechanic ID"}), 400
+
+
+# Remove a mechanic from a service_ticket
+@service_tickets_bp.route(
+    "/<int:service_ticket_id>/remove-mechanic/<int:mechanic_id>", methods=["DELETE"]
+)
+def remove_mechanic(service_ticket_id, mechanic_id):
+    ticket = db.session.get(ServiceTicket, service_ticket_id)
+    mechanic = db.session.get(Mechanic, mechanic_id)
+
+    if ticket and mechanic:
+        if mechanic in ticket.mechanics:
+            ticket.mechanics.remove(mechanic)
+            db.session.commit()
+            return jsonify(
+                {
+                    "message": f"successfully removed {mechanic.name} from the ticket",
+                    "ticket": service_ticket_schema.dump(ticket),
+                    "mechanic": mechanics_schema.dump(ticket.mechanics),
+                }
+            ), 200
+        return jsonify({"error": "Mechanic not assigned to this service ticket"}), 400
+    return jsonify({"error": "Invalid service ticket or mechanic ID"}), 400
+
 
 # Update a service_ticket
-@service_tickets_bp.route('/<int:service_ticket_id>', methods=['PUT'])
+@service_tickets_bp.route("/<int:service_ticket_id>", methods=["PUT"])
 @limiter.limit("5/hour")
 @admin_required
 def update_service_ticket(service_ticket_id):
@@ -94,14 +132,18 @@ def update_service_ticket(service_ticket_id):
         return jsonify(e.messages), 400
 
     query = select(ServiceTicket).where(
-        (ServiceTicket.VIN == service_ticket_data["VIN"]) &
-        (ServiceTicket.service_date == service_ticket_data["service_date"]) &
-        (ServiceTicket.id != service_ticket_id)
+        (ServiceTicket.VIN == service_ticket_data["VIN"])
+        & (ServiceTicket.service_date == service_ticket_data["service_date"])
+        & (ServiceTicket.id != service_ticket_id)
     )
     existing_ticket = db.session.execute(query).scalars().first()
 
     if existing_ticket:
-        return jsonify({"error": "Service ticket already exists for this VIN on the specified date"}), 400
+        return jsonify(
+            {
+                "error": "Service ticket already exists for this VIN on the specified date"
+            }
+        ), 400
 
     for fields, value in service_ticket_data.items():
         setattr(service_ticket, fields, value)
@@ -109,8 +151,9 @@ def update_service_ticket(service_ticket_id):
     db.session.commit()
     return service_ticket_schema.jsonify(service_ticket), 200
 
+
 # Delete a service_ticket
-@service_tickets_bp.route('/<int:service_ticket_id>', methods=['DELETE'])
+@service_tickets_bp.route("/<int:service_ticket_id>", methods=["DELETE"])
 @limiter.limit("5/hour")
 @admin_required
 def delete_service_ticket(service_ticket_id):
@@ -123,3 +166,47 @@ def delete_service_ticket(service_ticket_id):
     db.session.commit()
 
     return jsonify({"message": "service_ticket deleted successfully"}), 200
+
+
+# Add a part to a service_ticket
+@service_tickets_bp.route("/<int:ticket_id>/add-part/<int:part_id>", methods=["PUT"])
+def add_part(ticket_id, part_id):
+    ticket = db.session.get(ServiceTicket, ticket_id)
+    part = db.session.get(SerializedPart, part_id)
+
+    if ticket and part:
+        if not part.ticket_id:
+            ticket.serialized_parts.append(part)
+            db.session.commit()
+            return jsonify(
+                {
+                    "message": f"successfully added part to the ticket",
+                    "ticket": service_ticket_schema.dump(ticket),
+                    "parts": serialized_parts_schema.dump(ticket.serialized_parts),
+                }
+            ), 200
+        return jsonify(
+            {"error": "This part has already been used in another service ticket"}
+        ), 400
+    return jsonify({"error": "Invalid service ticket or part ID"}), 400
+
+
+# Remove a serialized part from a service_ticket
+@service_tickets_bp.route("/<int:ticket_id>/remove-part/<int:part_id>", methods=["DELETE"])
+def remove_part(ticket_id, part_id):
+    ticket = db.session.get(ServiceTicket, ticket_id)
+    part = db.session.get(SerializedPart, part_id)
+
+    if ticket and part:
+        if not part.ticket_id:
+            ticket.serialized_parts.remove(part)
+            db.session.commit()
+            return jsonify(
+                {
+                    "message": f"successfully removed part from the ticket",
+                    "ticket": service_ticket_schema.dump(ticket),
+                    "parts": serialized_parts_schema.dump(ticket.serialized_parts),
+                }
+            ), 200
+        return jsonify({"error": "Part not assigned to this service ticket"}), 400
+    return jsonify({"error": "Invalid service ticket or part ID"}), 400
